# cpp-pipedream

./: .clang-format  .gitignore  404.html  CMakeLists.txt  README.md  TODO  index.html  pipedreamConfig.cmake.in
CMake/: .gitignore  Setup.cmake  cxx_features.cmake  docs.cmake  flag_me.cmake  install.cmake  setup.cmake  setup_post_project.cmake
api/: classpiped_1_1detail_1_1iterator__from__generator.html  classpiped_1_1extra_1_1ptr.html  classpiped_1_1ptr.html  group__comparison.html  group__container.html  group__dev.html  group__generator.html  group__mapping.html  group__match.html  group__regex.html  group__string.html  group__type__util.html  index.html  structpiped_1_1adl__map__to.html  structpiped_1_1adl__map__to_3_01std_1_1sub__match_3_01const_01char_01_5_01_4_00_01std_1_1string__view_01_4.html  structpiped_1_1adl__match.html  structpiped_1_1adl__match_3_01M_00_01std_1_1variant_3_01Ts_8_8_8_01_4_01_4.html  structpiped_1_1adl__piped.html  structpiped_1_1adl__piped__assign.html  structpiped_1_1adl__piped__out.html  structpiped_1_1detail_1_1call__.html  structpiped_1_1detail_1_1collect__.html  structpiped_1_1detail_1_1collect___3_01std_1_1map_00_01Ts_8_8_8_01_4.html  structpiped_1_1detail_1_1each__.html  structpiped_1_1detail_1_1each__match__.html  structpiped_1_1detail_1_1erase__if__.html  structpiped_1_1detail_1_1exists.html  structpiped_1_1detail_1_1filter__.html  structpiped_1_1detail_1_1find.html  structpiped_1_1detail_1_1find__helper.html  structpiped_1_1detail_1_1find__helper_3_01M_00_01T_01_4.html  structpiped_1_1detail_1_1generator__filter.html  structpiped_1_1detail_1_1generator__map.html  structpiped_1_1detail_1_1generator__map__nth.html  structpiped_1_1detail_1_1generator__map__to.html  structpiped_1_1detail_1_1generator__regex__matches.html  structpiped_1_1detail_1_1generator__regex__split.html  structpiped_1_1detail_1_1generator__seq.html  structpiped_1_1detail_1_1generator__skip.html  structpiped_1_1detail_1_1generator__string__split.html  (+29 more)
assets/css/: 0.styles.3352149c.css
assets/js/: 10.1927a13a.js  10.9b7e7ec2.js  11.3dd1adc0.js  11.bcff8787.js  11.fcff3008.js  12.9db82b99.js  12.c2205aa6.js  12.e6dcfa30.js  13.0cc4e4cb.js  13.1899f903.js  13.d63fc1de.js  14.6796ab8a.js  14.86a25e5e.js  14.b11c8d47.js  15.4ef499f1.js  15.a9f5004d.js  15.f0b1f3c0.js  16.215dd299.js  16.6aeee9aa.js  16.8c451cdb.js  17.1b413113.js  17.9315d100.js  17.c5f3969d.js  18.01d23f8f.js  18.41fa9e0d.js  18.e41df7dd.js  19.020382d9.js  19.ad41c321.js  19.b6cb1065.js  2.d5a3bb6d.js  20.1c525063.js  20.8af6efb6.js  20.97f7706c.js  21.21b49b36.js  21.88e77ff2.js  21.d17a3ce0.js  22.5be8a37d.js  22.d9a01063.js  22.eeda7a00.js  23.0d6b8aac.js  (+180 more)
doc/: basics.html  building.html  generators.html  map.html  setup.html
docs/: .gitignore  Doxyfile  deploy.sh  doxyproc.sh  vuepress-dev.sh  wait_gen_pipedream.sh
docs/doxyproc/: class_template.md  group_template.md  index_rules.js  index_template.md  rules.js
docs/website/: .gitignore  package.json
docs/website/.vuepress/: config.js
docs/website/doc/: map.md  (+4 more)
examples/: .clang-format  CMakeLists.txt  basic_split1.cpp  basic_stdmap1.cpp  basic_zip1.cpp  build_operation1.cpp  build_operation2.cpp  build_operation3.cpp  gen_chain1.cpp  gen_map1.cpp  gen_simple1.cpp  setup_example.cpp  test.cpp
include/: piped.hpp
include/piped/: cmp.hpp  config.hpp  container.hpp  core.hpp  generator.hpp  map.hpp  match.hpp  ptr.hpp  regex.hpp  string.hpp  util.hpp  zip.hpp
t/: CMakeLists.txt  basic.cpp  map.cpp  regex.cpp
(+1 files in other folders)
